Amend logic for calculations

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: #eee;
+  background: #626161;
   overflow: hidden;
 }
 
