--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 :root {
   box-sizing: border-box;
+  --bg: #25292eec;
+  --key-color: #dedcdc;
+  --key-active-color: #909090;
+  --utility-key: #424141;
+  --operator-key: #3a6590;
+  --keypad-bg: #626161;
+  --screen-bg: #25282c;
+  --radius-top: 8px 8px 0 0;
+  --radius-bottom: 0 0 8px 8px;
+  --radius: 8px;
 }
 
 body {
@@ -7,7 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: #626161;
+  background: var(--bg);
   overflow: hidden;
 }
 
@@ -20,7 +30,9 @@ body {
 .calculator {
   display: flex;
   flex-direction: column;
-  background: #202020;
+  background: var(--screen-bg);
+  border-radius: var(--radius);
+  box-shadow: 0 0 2px rgba(147, 147, 147, 0.5);
   width: 100%;
   height: 100%;
 }
@@ -30,7 +42,7 @@ body {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  border: 0.5px solid #1a1a1a;
+  border-radius: var(--radius-top);
   color: #fff;
   font-size: 66px;
   margin-right: 10px;
@@ -40,7 +52,7 @@ body {
 .keypad {
   display: flex;
   flex-wrap: wrap;
-  color: #7d7d7d;
+  border-radius: (var(--radius-bottom));
   line-height: 120;
   height: 400px;
 }
@@ -50,16 +62,37 @@ body {
   justify-content: center;
   align-items: center;
   outline: 0;
-  color: #d21d1d;
+  color: var(--key-color);
   text-align: center;
-  background: #aaaaaa;
+  font-size: 28px;
+  background: var(--keypad-bg);
   border: 0.5px solid #1a1a1a;
   width: 80px;
   height: 80px;
 }
 
+.operator-key {
+  background: var(--operator-key);
+}
+
+.utility-key {
+  background: var(--utility-key);
+}
+
+.btm-key-left {
+  border-radius: 0 0 0 8px;
+}
+
+.btm-key-right {
+  border-radius: 0 0 8px 0;
+}
+
+.decimal {
+  font-size: 20px;
+}
+
 .cal-key:active {
-  background-color: #909090;
+  background-color: var(--key-active-color);
 }
 
 .cal-key-double {
